// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SectionNav should render app with subapp and custom url, but without group  1`] = `
<div>
  <li
    class="pf-c-nav__item pf-m-expandable ins-m-navigation-align"
    data-ouia-component-id="app"
    data-ouia-component-type="PF4/NavExpandable"
    data-ouia-safe="true"
    itemid="app"
  >
    <button
      aria-expanded="false"
      class="pf-c-nav__link"
      id="app"
    >
      title
      <span
        class="pf-c-nav__toggle"
      >
        <span
          class="pf-c-nav__toggle-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 256 512"
            width="1em"
          >
            <path
              d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
            />
          </svg>
        </span>
      </span>
    </button>
    <section
      aria-labelledby="app"
      class="pf-c-nav__subnav"
      hidden=""
    >
      
      <ul
        class="pf-c-nav__list"
      >
        <li
          class="pf-c-nav__item"
          data-ouia-component-id="subapp"
          data-ouia-component-type="PF4/NavItem"
          data-ouia-safe="true"
        >
          <a
            class="pf-c-nav__link"
            href="example.url.com"
          >
            Title2
             
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              role="img"
              style="vertical-align: -0.125em;"
              viewBox="0 0 512 512"
              width="1em"
            >
              <path
                d="M432,320H400a16,16,0,0,0-16,16V448H64V128H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V336A16,16,0,0,0,432,320ZM488,0h-128c-21.37,0-32.05,25.91-17,41l35.73,35.73L135,320.37a24,24,0,0,0,0,34L157.67,377a24,24,0,0,0,34,0L435.28,133.32,471,169c15,15,41,4.5,41-17V24A24,24,0,0,0,488,0Z"
              />
            </svg>
          </a>
        </li>
      </ul>
    </section>
  </li>
</div>
`;

exports[`SectionNav should render app with subapp without group 1`] = `
<div>
  <li
    class="pf-c-nav__item pf-m-expandable ins-m-navigation-align"
    data-ouia-component-id="app"
    data-ouia-component-type="PF4/NavExpandable"
    data-ouia-safe="true"
    itemid="app"
  >
    <button
      aria-expanded="false"
      class="pf-c-nav__link"
      id="app"
    >
      title
      <span
        class="pf-c-nav__toggle"
      >
        <span
          class="pf-c-nav__toggle-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 256 512"
            width="1em"
          >
            <path
              d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
            />
          </svg>
        </span>
      </span>
    </button>
    <section
      aria-labelledby="app"
      class="pf-c-nav__subnav"
      hidden=""
    >
      
      <ul
        class="pf-c-nav__list"
      >
        <li
          class="pf-c-nav__item"
          data-ouia-component-id="subapp"
          data-ouia-component-type="PF4/NavItem"
          data-ouia-safe="true"
        >
          <a
            class="pf-c-nav__link"
            href="http://localhost/loc/app/subapp"
          >
            Title2
             
          </a>
        </li>
      </ul>
    </section>
  </li>
</div>
`;

exports[`SectionNav should render app without group 1`] = `
<div>
  <li
    class="pf-c-nav__item"
    data-ouia-component-id="app"
    data-ouia-component-type="PF4/NavItem"
    data-ouia-safe="true"
  >
    <a
      class="pf-c-nav__link"
      href="http://localhost/loc/app"
    >
      Title
       
    </a>
  </li>
</div>
`;

exports[`SectionNav should render corectly 1`] = `
<div>
  <li
    class="pf-c-nav__item"
    data-ouia-component-id="id"
    data-ouia-component-type="PF4/NavItem"
    data-ouia-safe="true"
  >
    <a
      class="pf-c-nav__link"
      href="http://localhost/loc/id"
    >
      Title
       
    </a>
  </li>
</div>
`;

exports[`SectionNav should render group with app 1`] = `
<div>
  <section
    aria-labelledby="section1"
    class="pf-c-nav__section ins-c-section-nav"
  >
    <h2
      class="pf-c-nav__section-title"
      id="section1"
    />
    <ul>
      <li
        class="pf-c-nav__item"
        data-ouia-component-id="app"
        data-ouia-component-type="PF4/NavItem"
        data-ouia-safe="true"
      >
        <a
          class="pf-c-nav__link"
          href="http://localhost/loc/app"
        >
          Title
           
        </a>
      </li>
    </ul>
  </section>
</div>
`;

exports[`SectionNav should render group with app and sub app 1`] = `
<div>
  <section
    aria-labelledby="section1"
    class="pf-c-nav__section ins-c-section-nav"
  >
    <h2
      class="pf-c-nav__section-title"
      id="section1"
    />
    <ul>
      <li
        class="pf-c-nav__item pf-m-expandable ins-m-navigation-align"
        data-ouia-component-id="app"
        data-ouia-component-type="PF4/NavExpandable"
        data-ouia-safe="true"
        itemid="app"
      >
        <button
          aria-expanded="false"
          class="pf-c-nav__link"
          id="app"
        >
          title
          <span
            class="pf-c-nav__toggle"
          >
            <span
              class="pf-c-nav__toggle-icon"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 256 512"
                width="1em"
              >
                <path
                  d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                />
              </svg>
            </span>
          </span>
        </button>
        <section
          aria-labelledby="app"
          class="pf-c-nav__subnav"
          hidden=""
        >
          
          <ul
            class="pf-c-nav__list"
          >
            <li
              class="pf-c-nav__item"
              data-ouia-component-id="subapp"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-c-nav__link"
                href="http://localhost/loc/app/subapp"
              >
                Title2
                 
              </a>
            </li>
          </ul>
        </section>
      </li>
    </ul>
  </section>
</div>
`;

exports[`SectionNav should render group with app, sub app and custom url 1`] = `
<div>
  <section
    aria-labelledby="section1"
    class="pf-c-nav__section ins-c-section-nav"
  >
    <h2
      class="pf-c-nav__section-title"
      id="section1"
    />
    <ul>
      <li
        class="pf-c-nav__item pf-m-expandable ins-m-navigation-align"
        data-ouia-component-id="app"
        data-ouia-component-type="PF4/NavExpandable"
        data-ouia-safe="true"
        itemid="app"
      >
        <button
          aria-expanded="false"
          class="pf-c-nav__link"
          id="app"
        >
          title
          <span
            class="pf-c-nav__toggle"
          >
            <span
              class="pf-c-nav__toggle-icon"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 256 512"
                width="1em"
              >
                <path
                  d="M224.3 273l-136 136c-9.4 9.4-24.6 9.4-33.9 0l-22.6-22.6c-9.4-9.4-9.4-24.6 0-33.9l96.4-96.4-96.4-96.4c-9.4-9.4-9.4-24.6 0-33.9L54.3 103c9.4-9.4 24.6-9.4 33.9 0l136 136c9.5 9.4 9.5 24.6.1 34z"
                />
              </svg>
            </span>
          </span>
        </button>
        <section
          aria-labelledby="app"
          class="pf-c-nav__subnav"
          hidden=""
        >
          
          <ul
            class="pf-c-nav__list"
          >
            <li
              class="pf-c-nav__item"
              data-ouia-component-id="subapp"
              data-ouia-component-type="PF4/NavItem"
              data-ouia-safe="true"
            >
              <a
                class="pf-c-nav__link"
                href="http://localhost/loc/app/subapp"
              >
                Title2
                 
              </a>
            </li>
          </ul>
        </section>
      </li>
    </ul>
  </section>
</div>
`;
